Fix issue where user without gravatar img sees huge octocat on user profile comment area and it covers their comment box [closes #16]

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -326,3 +326,9 @@ footer p span {
 .header {
 	height: 80px;
 }
+
+/*fixes issue where user without avatar sees huge octocat when they visit user profile on comment side of page*/
+.hull-comments__form img {
+	width: 80px;
+	height: 80px;
+}
